--- a/scss/style.scss
+++ b/scss/style.scss
@@ -136,7 +136,8 @@ section:last-child {
 
 section h3 {
   text-transform: uppercase;
-  font-weight: 400;
+  text-align: left;
+  font-weight: 600;
 }
 
 .navicon {
