--- a/scss/style.scss
+++ b/scss/style.scss
@@ -130,9 +130,46 @@ section:last-child {
   margin-top: 1rem;
   border-radius: 5px;
   border: 1px solid $midgrey;
-  padding: .5rem;
+  padding: 1rem;
   background-color: $lightgrey;
+  display: flex;
+  flex-direction: row;
+
+  div {
+    margin: 0;
+    margin-left: 1rem;
+    text-align: left;
+  }
+
+  h4 {
+    color: $color1;
+    font-weight: 400;
+    margin-top: 1rem;
+  }
+
+  p {
+    font-size: 2.5rem;
+    font-weight: 300;
+    color: $darkgrey;
+    margin: 0;
+  }
+
+  .avatar {
+    background-color: $color1;
+    width: 6em;
+    margin: 0;
+    display: flex;
+  }
+
 }
+
+.social-icon {
+  width: 50%;
+  fill: #fff;
+  margin:auto;
+}
+
+
 
 section h3 {
   text-transform: uppercase;
